<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/logo_bg"
    tools:context=".Activities.MainLoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/sea_img"
        android:scaleType="centerCrop"
        android:foreground="@drawable/login_main_foreground"/>

    <com.anush.vibora.CustomClasses.CustomTextView
        android:id="@+id/header_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="#00000000"
        android:text="@string/vibora_bold"
        android:textColor="@color/fixed_text_light"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:typeface="manrope_bold.ttf" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:background="@drawable/login_top_corner_bg"
        android:clipToOutline="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_title"
        tools:targetApi="31">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp"
                android:background="@color/white"
                android:orientation="vertical">

                <com.anush.vibora.CustomClasses.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/welcome_buddies"
                    android:textSize="24sp"
                    android:background="@color/white"
                    android:textColor="@color/purple"
                    app:typeface="manrope_bold.ttf"/>

                <com.anush.vibora.CustomClasses.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/login_desc"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:background="@color/white"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/fixed_text_dark"
                    app:typeface="manrope_regular.ttf"/>

                <LinearLayout
                    android:id="@+id/loginLay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <com.anush.vibora.CustomClasses.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email_id"
                        android:textSize="16sp"
                        android:background="@color/white"
                        android:textColor="@color/fixed_text_dark"
                        app:typeface="manrope_semibold.ttf"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/login_edt_bg">

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:padding="10dp"
                            android:background="@color/white"
                            android:layout_marginStart="5dp"
                            android:src="@drawable/mail" />

                        <com.anush.vibora.CustomClasses.CustomEditText
                            android:id="@+id/loginEmailEdt"
                            android:layout_width="wrap_content"
                            android:layout_height="50dp"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_toEndOf="@+id/imageView"
                            android:background="@null"
                            android:singleLine="true"
                            android:textSize="14sp"
                            android:textColor="@color/primary_text"
                            android:hint="@string/enter_your_email"
                            android:textColorHint="@color/colorHint"
                            android:backgroundTint="@color/white"/>

                    </RelativeLayout>

                    <com.anush.vibora.CustomClasses.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/password"
                        android:textSize="16sp"
                        android:layout_marginTop="15dp"
                        android:background="@color/white"
                        android:textColor="@color/fixed_text_dark"
                        app:typeface="manrope_semibold.ttf"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/login_edt_bg">

                        <ImageView
                            android:id="@+id/togglePass"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:padding="10dp"
                            android:background="@color/white"
                            android:layout_marginStart="5dp"
                            android:src="@drawable/eye" />

                        <com.anush.vibora.CustomClasses.CustomEditText
                            android:id="@+id/loginPassEdt"
                            android:layout_width="wrap_content"
                            android:layout_height="50dp"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_toEndOf="@+id/togglePass"
                            android:background="@null"
                            android:singleLine="true"
                            android:textSize="14sp"
                            android:textColor="@color/primary_text"
                            android:hint="@string/enter_your_password"
                            android:textColorHint="@color/colorHint"
                            android:backgroundTint="@color/white"/>

                    </RelativeLayout>

                    <com.anush.vibora.CustomClasses.CustomTextView
                        android:id="@+id/loginBtn"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:text="@string/login"
                        android:gravity="center"
                        android:layout_marginTop="15dp"
                        android:textColor="@color/white"
                        android:background="@drawable/login_btn_bg"
                        app:layout_constraintTop_toBottomOf="@+id/mailLay"
                        app:layout_constraintStart_toStartOf="parent"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:typeface="manrope_semibold.ttf"/>

                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>